k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alphabet
  namespace: alphabet
  labels:
    app: alphabet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alphabet
  template:
    metadata:
      labels:
        app: alphabet
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: alphabet
          image: ghcr.io/bassemsab/alphabet:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
