k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alphabet
  namespace: alphabet
spec:
  selector:
    app: alphabet
  ports:
    - port: 80
      targetPort: 3000
