k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alphabet-ingress
  namespace: alphabet
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alphabet.ether.paris
      secretName: alphabet-tls
  rules:
    - host: alphabet.ether.paris
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alphabet
                port:
                  number: 80
